test/sema/typeck/var/global-init-wrong-type.out
error: cannot assign `Bool` to variable of type `Int32`.
--> global-init-wrong-type.dora:1:1
 | let x: Int32 = true;
   ~~~~~~~~~~~~~~~~~~~~
 | 
1 error found.
