test/sema/typeck/var/global-init-wrong-type.dora
let x: Int32 = true;
